--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'TestProject' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'TestProjectTests' do
     inherit! :complete
     # Pods for testing
