--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
