--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.68.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-reanimated": "^2.5.0",
+    "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
