--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@reduxjs/toolkit": "^1.8.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-date-picker": "^4.2.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-image-picker": "^4.7.3",
     "react-native-reanimated": "^2.5.0",
     "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "^4.2.4",
